to legacy forge plugin